==> wtcat/zephyrkit/rootkit/drivers/zephyr/adc/adc_apollo.c <==
#define DT_DRV_COMPAT ambiq_apollo3p_adc
#include <errno.h>
#include <drivers/adc.h>
#include <device.h>
#include <kernel.h>
#include <init.h>
#include <soc.h>
#include <devicetree/io-channels.h>
#define ADC_CONTEXT_USES_KERNEL_TIMER
#include "adc/adc_context.h"
#define LOG_LEVEL CONFIG_ADC_LOG_LEVEL
#include <logging/log.h>
#define MAX_SLOTS AM_HAL_ADC_MAX_SLOTS

static void adc_context_start_sampling(struct adc_context *ctx)
{
	struct apollo_adc_data *data = 
        CONTAINER_OF(ctx, struct apollo_adc_data, ctx);
	data->repeat_buffer = data->buffer;
    adc_start_convert(data->devno);
}

static void adc_apollo_isr(const struct device *dev)
{
    struct apollo_adc_data *data = dev->data;
    uint32_t devno = data->devno;
    uint32_t status = ADCn(devno)->INTSTAT;
    uint32_t value;

    ADCn(devno)->INTCLR = status;
    if (status & AM_HAL_ADC_INT_SCNCMP) {
        if (status & AM_HAL_ADC_INT_CNVCMP) {
            do {
                value = ADCn(devno)->FIFOPR;
                if (!AM_HAL_ADC_FIFO_COUNT(value))
                    break;
                *data->buffer++ = AM_HAL_ADC_FIFO_SAMPLE(value);
                data->channels &= ~(1u << AM_HAL_ADC_FIFO_SLOT(value));
            } while (true);
        }

        if (data->channels)
            adc_start_convert(devno);
        else
            adc_context_on_sampling_done(&data->ctx, dev);
    }
    LOG_DBG("ISR triggered.");
}

static int check_buffer_size(const struct adc_sequence *sequence,
			     uint8_t active_channels)
{
	size_t needed_bsize = active_channels * sizeof(uint16_t);
	if (sequence->options)
		needed_bsize *= (1 + sequence->options->extra_samplings);
	if (sequence->buffer_size < needed_bsize) {
		LOG_ERR("%s(): Provided buffer is too small (%u/%u)", __func__,
				sequence->buffer_size, needed_bsize);
		return -ENOMEM;
	}
	return 0;
}

static int start_read(const struct device *dev,
        const struct adc_sequence *sequence)
{
    struct apollo_adc_data *data = dev->data;
    struct sampling_param *param = &data->param;
    uint32_t channels = sequence->channels;
    uint32_t resolution, avg;
    uint32_t actived, no;
    int ret;

    if (channels == param->channels &&
        sequence->resolution == param->resolution &&
        sequence->oversampling == param->oversampling)
        goto _start_convert;
    
    switch (sequence->resolution) {
    case 8:
        resolution = AM_HAL_ADC_SLOT_8BIT;
        break;
    case 10:
        resolution = AM_HAL_ADC_SLOT_10BIT;
        break;
    case 12:
        resolution = AM_HAL_ADC_SLOT_12BIT;
        break;
    case 14:
        resolution = AM_HAL_ADC_SLOT_14BIT;
        break;
    default:
        LOG_ERR("%s(): Unsupported resolution value %d\n", __func__, 
            sequence->resolution);
        return -EINVAL;
    }

    if (sequence->oversampling > 7) {
        LOG_ERR("%s(): Unsupported oversampling value %d\n", __func__,
            sequence->oversampling);
        return -EINVAL;
    }
    
    avg = adc_oversampling_rate[sequence->oversampling];
    adc_apollo_channel_disable_all(data);
    for (no = 0, actived = 0; channels; no++) {
        if (channels & 1) {
            adc_apollo_channel_enable(data, no, resolution, avg);
            actived++;
        }
        channels >>= 1;
    }
    
    ret = check_buffer_size(sequence, actived);
    if (ret)
        goto _exit;

    param->channels = sequence->channels;
    param->resolution = sequence->resolution;
    param->oversampling = sequence->oversampling;
    
_start_convert:     
    data->buffer = sequence->buffer;
    data->channels = sequence->channels;
	adc_context_start_read(&data->ctx, sequence);
    ret = adc_context_wait_for_completion(&data->ctx);
_exit:
    return ret;
}

static int adc_apollo_read(const struct device *dev,
        const struct adc_sequence *sequence)
{
    struct apollo_adc_data *data = dev->data;
    int error;

    adc_context_lock(&data->ctx, false, NULL);
    error = start_read(dev, sequence);
    adc_context_release(&data->ctx, error);
    return error;
}

static int adc_apollo_read_async(const struct device *dev,
           const struct adc_sequence *sequence,
           struct k_poll_signal *async)
{
    struct apollo_adc_data *data = dev->data;
    int error;

    adc_context_lock(&data->ctx, true, async);
    error = start_read(dev, sequence);
    adc_context_release(&data->ctx, error);
    return error;
}

static int adc_apollo_channel_setup(const struct device *dev,
				   const struct adc_channel_cfg *channel_cfg)
{
    struct apollo_adc_data *data = dev->data;
    uint8_t channel_id = channel_cfg->channel_id;
    if (!channel_cfg->differential) {
        if (channel_id >= MAX_SLOTS) {
            LOG_ERR("%s(): ADC single-end channel-id is too large\n", 
                __func__);
            return -EINVAL;
        }
        data->slots[channel_id].channel = adc_channels[channel_id];
    } else {
        if (channel_id >= 2) {
            LOG_ERR("%s(): ADC differential channel-id is too large\n", 
                __func__);
            return -EINVAL;
        }
        data->slots[channel_id].channel = adc_diff_channels[channel_id];
    }
    return 0;
}

static int adc_apollo_init(const struct device *dev)
{
    struct apollo_adc_data *data = dev->data;
    am_hal_adc_config_t adc_cfg;

    if (am_hal_adc_initialize(data->devno, &data->handle)) {
        LOG_ERR("%s(): ADC initialize failed(module: %d)\n", 
            __func__, data->devno);
        return -EINVAL;
    }

    if (am_hal_adc_power_control(data->handle, AM_HAL_SYSCTRL_WAKE, false)) {
        LOG_ERR("%s(): ADC power on\n", __func__);
        return -EINVAL;
    }

    /* Set up the ADC configuration parameters */
    adc_cfg.eClock             = AM_HAL_ADC_CLKSEL_HFRC;
    adc_cfg.ePolarity          = AM_HAL_ADC_TRIGPOL_RISING;
    adc_cfg.eTrigger           = AM_HAL_ADC_TRIGSEL_SOFTWARE;
    adc_cfg.eReference         = AM_HAL_ADC_REFSEL_INT_1P5;
    adc_cfg.eClockMode         = AM_HAL_ADC_CLKMODE_LOW_POWER;
    adc_cfg.ePowerMode         = AM_HAL_ADC_LPMODE0;
    adc_cfg.eRepeat            = AM_HAL_ADC_SINGLE_SCAN;
    if (am_hal_adc_configure(data->handle, &adc_cfg)) {
        LOG_ERR("%s(): Configuring ADC failed\n", __func__);
        return -EIO;
    }

    adc_apollo_setup_pins();
    am_hal_adc_interrupt_clear(data->handle, 0xFFFFFFFF);
    am_hal_adc_interrupt_disable(data->handle, 0xFFFFFFFF);
    am_hal_adc_interrupt_enable(data->handle, AM_HAL_ADC_INT_SCNCMP);
    irq_connect_dynamic(DT_INST_IRQN(0), DT_INST_IRQ(0, priority),
        (void(*)(const void *))adc_apollo_isr, dev, 0);
    irq_enable(DT_INST_IRQN(0));
    am_hal_adc_enable(data->handle);
    adc_context_unlock_unconditionally(&data->ctx);
    return 0;
}
